# MusicApp

./: .gitignore  .hintrc  README.md  django comands.md  pyproject.toml
musicplatform/: RESULTS.md  celerybeat-schedule.dir  conftest.py  pyproject.toml  pytest.ini
musicplatform/accounts/: views.py
musicplatform/albums/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_album_is_approved.py  0002_alter_album_album_name_alter_album_artist_and_more.py  0002_alter_album_album_name_alter_album_release_datetime.py  0002_alter_album_options_album_artist.py  0002_alter_album_options_remove_album_name_and_more.py  0002_alter_song_audio_file_alter_song_image.py  0003_alter_album_album_name_alter_album_artist.py  0003_alter_album_artist_alter_album_creation_datetime.py  0003_alter_album_release_datetime.py  0003_alter_song_image.py  0004_alter_album_options.py  0004_alter_album_release_datetime.py  0004_alter_song_audio_file.py  0004_song.py  0005_album_is_approved.py  0005_alter_album_artist.py  0005_alter_song_album_alter_song_audio_file_and_more.py  0006_alter_album_release_datetime.py  0007_alter_album_release_datetime.py  0008_alter_album_release_datetime.py  0009_alter_album_release_datetime.py  0010_alter_album_release_datetime.py  0011_alter_album_creation_datetime_and_more.py  0012_alter_album_artist_alter_album_name.py  0014_alter_album_creation_datetime.py  (+1 more)
musicplatform/artists/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/authentication/: forms.py  serializers.py  urls.py  views.py
musicplatform/musicplatform/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
musicplatform/templates/: mainpage.html
musicplatform/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+26 files in other folders)
