[tool.poetry]
name = "musicapp"
version = "0.1.0"
description = ""
authors = ["Ammar Mahmoud <amar.link8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
